--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@photo-sphere-viewer/core/index.min.css" />
-        <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@photo-sphere-viewer/autorotate-plugin/index.min.css" /> -->
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@photo-sphere-viewer/gyroscope-plugin/index.min.css" />
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@photo-sphere-viewer/autorotate-plugin/index.min.css" />
+        <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@photo-sphere-viewer/gyroscope-plugin/index.min.css" /> -->
     </head>
 
     <script src="https://cdn.jsdelivr.net/npm/three/build/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@photo-sphere-viewer/core/index.min.js"></script>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/@photo-sphere-viewer/autorotate-plugin/index.min.js"></script> -->
-    <script src="https://cdn.jsdelivr.net/npm/@photo-sphere-viewer/gyroscope-plugin/index.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@photo-sphere-viewer/autorotate-plugin/index.min.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/@photo-sphere-viewer/gyroscope-plugin/index.min.js"></script> -->
 
     <!-- the viewer container must have a defined size -->
     <div id="viewer" style="width: 95vw; height: 95vh;"></div>
@@ -24,10 +24,10 @@
             panorama: 'https://photo-sphere-viewer-data.netlify.app/assets/sphere.jpg',
             caption: 'Detta blir action <b>&copy; Eller ka du trur?</b>',
             plugins: 
-                // [PhotoSphereViewer.AutorotatePlugin, {
-                //     autorotatePitch: '80deg',
-                // }],
-                [PhotoSphereViewer.GyroscopePlugin],
+                [PhotoSphereViewer.AutorotatePlugin, {
+                    autorotatePitch: '80deg',
+                }],
+                // [PhotoSphereViewer.GyroscopePlugin],
             
         });
     </script>
