--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
             panorama: 'https://photo-sphere-viewer-data.netlify.app/assets/sphere.jpg',
             caption: 'Detta blir action <b>&copy; Eller ka du trur?</b>',
             plugins: 
-                [PhotoSphereViewer.AutorotatePlugin, {
+                [[PhotoSphereViewer.AutorotatePlugin, {
                     autorotatePitch: '80deg',
-                }],
+                }],],
                 // [PhotoSphereViewer.GyroscopePlugin],
             
         });
