--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         const baseUrl = "https://stoy.codes/pano/images/";
         const viewer = new PhotoSphereViewer.Viewer({
             container: document.querySelector('#viewer'),
-            panorama: baseUrl + 'digiStreet1',
+            panorama: baseUrl + 'digiStreet1.jpg',
             caption: 'Detta blir action <b>&copy; Eller ka du trur?</b>',
             plugins: 
                 [PhotoSphereViewer.GyroscopePlugin],
