--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@photo-sphere-viewer/gyroscope-plugin/index.min.js"></script>
 
     <!-- the viewer container must have a defined size -->
-    <div id="viewer" style="width: 90vw; height: 90vh;"></div>
+    <div id="viewer" style="width: 100vw; height: 100vh; margin: 0; overflow: hidden;"></div>
 
     <script>
         const baseUrl = "https://stoy.codes/pano/images/";
@@ -22,9 +22,11 @@
             container: document.querySelector('#viewer'),
             panorama: baseUrl + 'digiStreet1.jpg',
             caption: 'Detta blir action <b>&copy; Eller ka du trur?</b>',
-            plugins: 
-                [PhotoSphereViewer.GyroscopePlugin],
-            
+            plugins: [
+                [PhotoSphereViewer.GyroscopePlugin, {
+                    moveMode: 'fast',
+                }],
+            ],
         });
     </script>
 
