Applying 0 default zoom and testing constant width

--- a/index.html
+++ b/index.html
@@ -20,11 +20,14 @@
         const baseUrl = "https://stoy.codes/pano/images/";
         const viewer = new PhotoSphereViewer.Viewer({
             container: document.querySelector('#viewer'),
-            panorama: baseUrl + 'digiStreet2.jpg',
+            panorama: baseUrl + 'digiStreet1.jpg',
             caption: 'Detta blir action <b>&copy; Eller ka du trur?</b>',
+            defaultZoomLvl: '0',
+            size: {width: 1000},
             plugins: [
                 [PhotoSphereViewer.GyroscopePlugin, {
                     moveMode: 'fast',
+                    absolutePosition: 'true',
                 }],
             ],
         });
