--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             plugins: [
                 [PhotoSphereViewer.GyroscopePlugin, {
                     moveMode: 'fast',
-                    absolutePosition: 'true',
+                    absolutePosition: 'false',
                 }],
             ],
         });
