testing partial pano

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         const baseUrl = "https://stoy.codes/pano/images/";
         const viewer = new PhotoSphereViewer.Viewer({
             container: document.querySelector('#viewer'),
-            panorama: baseUrl + 'digiStreet2.jpg',
+            panorama: baseUrl + 'pano.jpg',
             caption: 'Detta blir action <b>&copy; Eller ka du trur?</b>',
             defaultZoomLvl: '0',
             plugins: [
