--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div id="viewer" style="width: 90vw; height: 90vh; margin: 0; overflow: hidden;"></div>
 
     <script>
-        const baseUrl = "https://stoy.codes/pano/images/";
+        const baseUrl = "./images/";
         const viewer = new PhotoSphereViewer.Viewer({
             container: document.querySelector('#viewer'),
             panorama: baseUrl + 'pano.jpg',
